@@ -4,7 +4,8 @@ Changelog
 1.0b4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- make sure draft is available before initializing the draft proxy object
+  [vangheem]
 
 
 1.0b3 (2015-06-10)
